# xwhy

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  404.html  BingSiteAuth.xml  LICENSE  PointCloud.html  README.md  geo.html  index.html  index.md  justfile  llm.html  llms-full.txt  llms.txt  mkdocs.yml  multimodal.html  noxfile.py  objects.inv  pyproject.toml  setup.py  sitemap.xml  smile.yml  talks.html
.github/: CODE_OF_CONDUCT.md  README.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml
RELEASING/: index.html  index.md
contribute/contributing/: index.html  index.md
docs/: BingSiteAuth.xml  Original_SMILE_Cite.bib  RELEASING.md  examples.md  gen_ref_pages.py  index.md  llm_explainer.md  robots.txt
docs/assets/javascripts/: ai-links.js
docs/assets/stylesheets/: extra.css
docs/contribute/: contributing.md
docs/examples/: index.md  llm-explainer.md
docs/notebooks/: README.md
draft/: adversarial-attack-on-xwhy.ipynb  x-why-for-gnn.ipynb  x-why-image-test-v1-0-0.ipynb
examples/: README.md  adversarial-attack-on-xwhy.ipynb  index.html  index.md  x-why-for-text-vs-Eli5.ipynb  x-why-vs-adversarial-attack-on-expl.ipynb
examples/Adversarial_Attacks_Examples/: aa-on-xwhy-v3.ipynb  aa-on-xwhy-v5.ipynb
examples/Graph_Examples/: x-why-explainability-for-gnn_without_xevaluation.ipynb
examples/Image_Classification_Examples/: XWhy-for-Image-Classification [Skin Cancer with EfficientNet].ipynb  XWhy_Image_classification.py  requirements.txt  skin-cancer-xwhy-explainability_v2.ipynb  x-why-image-test-v1-0-0_AK.ipynb  xwhy-for-image-classification.ipynb  xwhy-for-image-pytorch.ipynb  xwhy-for-image-v2.ipynb
examples/Large_Language_Models/: gpt-smile-anthropic-p2.ipynb  llm-gsmile-gpt-3-5.ipynb  llm_gsmile_openai.ipynb  llm_gsmile_openai.py  requirements.txt
examples/NLP_Examples/: pyproject.toml  requirements.txt  x-why-for-text.ipynb  x_why_for_text_smile.ipynb  x_why_for_text_smile.py
examples/NLP_Examples/LLM_Examples/: README.md
examples/Pix2Pix_Instruct/: .env.example  README.md  SMILE_for_Instruction_based_Image_Editing.ipynb  pyproject.toml  requirements.txt  smile_for_instruction_based_image_editing.py
examples/Point Cloud Examples/: README.md  pyproject.toml  requirements.txt
examples/Point Cloud Examples/Notebooks/: SMILE_Point_Cloud_K1.ipynb  smile_point_cloud_k2.py
examples/Tabular_Example/: SMILE-Tabular.py  artificial_data.csv  pyproject.toml  requirements.txt  smile_tabular.py
examples/TimeSeries_Examples/: x_why_for_timeseries.ipynb
examples/White-box_Testing/: README.md  xwhy-mars-test.ipynb
examples/llm-explainer/: index.html  index.md
gen_ref_pages/: index.html
graphics/: index.html
llm_explainer/: index.html  index.md
notebooks/: index.html
reference/SUMMARY/: index.html
reference/xwhy/: index.html
reference/xwhy/adapters/: index.html
reference/xwhy/adapters/base/: index.html
reference/xwhy/bootstrap/: index.html
reference/xwhy/config/: index.html
reference/xwhy/config/env/: index.html
reference/xwhy/config/settings/: index.html
reference/xwhy/core/: index.html
reference/xwhy/core/config/: index.html
reference/xwhy/core/contracts/: index.html
reference/xwhy/core/exceptions/: index.html
reference/xwhy/core/explainer/: index.html
reference/xwhy/core/pipeline/: index.html
reference/xwhy/core/result/: index.html
reference/xwhy/core/types/: index.html
reference/xwhy/datasets/: index.html
reference/xwhy/distance/: index.html
reference/xwhy/distance/base/: index.html
reference/xwhy/distance/normalization/: index.html
reference/xwhy/embeddings/: index.html
reference/xwhy/explainers/: index.html
reference/xwhy/logger/: index.html
reference/xwhy/metrics/: index.html
reference/xwhy/perturbation/: index.html
reference/xwhy/plots/: index.html
reference/xwhy/providers/: index.html
reference/xwhy/surrogate/: index.html
reference/xwhy/utils/: index.html
search/: search_index.json
src/xwhy/: __init__.py  bootstrap.py  logger.py
src/xwhy/adapters/: __init__.py  base.py
src/xwhy/config/: __init__.py  auth.py  env.py  settings.py
src/xwhy/core/: __init__.py  config.py  contracts.py  exceptions.py  explainer.py  pipeline.py  result.py  types.py
src/xwhy/distance/: __init__.py  base.py  normalization.py  wmd.py
src/xwhy/embeddings/: __init__.py  base.py  factory.py  types.py  word2vec.py
src/xwhy/explainers/: __init__.py  image.py  llm.py  pix2pix.py  pointcloud.py  tabular.py  text.py
src/xwhy/metrics/: __init__.py  base.py  regression.py
src/xwhy/perturbation/: __init__.py  base.py  text.py
src/xwhy/plots/: __init__.py  base.py  factory.py  metrics.py  plots.py  text.py  types.py
src/xwhy/providers/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  huggingface.py  openai.py  resolver.py  types.py  utils.py
src/xwhy/surrogate/: __init__.py  base.py  factory.py  linear.py  trainer.py  tree.py  types.py
src/xwhy/utils/: __init__.py
src/xwhy/visualization/: __init__.py  base.py  factory.py  text.py  types.py
static/css/: index.css
test/: smile_tabular_test.py
tests/: conftest.py  smile_tabular_test.py  test_bootstrap.py
tests/config/: test_env.py  test_settings.py
tests/core/: test_result.py
tests/distance/: test_normalization.py  test_wmd.py
tests/embeddings/: test_embedding_factory.py  test_types.py  test_word2vec.py
tests/explainers/: test_llm.py
tests/metrics/: test_metrics.py
tests/perturbation/: test_text.py
tests/plots/: test_plots.py  test_plots_metrics.py
tests/providers/: test_anthropic.py  test_gemini.py  test_huggingface.py  test_openai.py  test_provider_factory.py  test_providers_utils.py  test_resolver.py
tests/surrogate/: test_surrogage_linear.py  test_surrogate_and_metrics.py  test_surrogate_factory.py  test_surrogate_tree.py  test_surrogate_types.py
tests/visualization/: test_visualization.py
xwhy/: __init__.py  datasets.py  smile_graph.py  smile_image.py  smile_quantum.py  smile_tabular.py  smile_text.py
(+34 files in other folders)
