[project]
name = "3-nlp-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "gensim>=4.4.0",
    "ipywidgets>=8.1.8",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pot>=0.9.6.post1",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "shap>=0.51.0",
]
