[project]
name = "pix2pix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate~=1.12.0",
    "diffusers~=0.38.0",
    "gdown~=5.2.2",
    "gensim~=4.4.0",
    "google-genai~=1.54.0",
    "kaleido>=1.2.0",
    "matplotlib~=3.10.0",
    "numpy~=2.0.2",
    "openai>=2.11.0",
    "opencv-python~=4.12.0.88",
    "pandas~=2.2.2",
    "pillow~=12.1.1",
    "plotly>=6.5.0",
    "pot~=0.9.6",
    "python-dotenv~=1.2.2",
    "requests~=2.33.0",
    "safetensors~=0.8.0rc0",
    "scikit-learn~=1.6.1",
    "scipy~=1.16.3",
    "sentence-transformers~=5.2.0",
    "tiktoken~=0.12.0",
    "torch~=2.9.0",
    "torchvision~=0.24.0",
    "transformers~=5.0.0rc3",
    "xgboost~=3.1.2",
]
