[project]
name = "2-point-cloud-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "gdown>=6.0.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "path>=17.1.1",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "torch>=2.11.0",
    "torch-geometric>=2.7.0",
    "torchvision>=0.26.0",
]
