[project]
name = "tabular-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipywidgets>=8.1.8",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "scikit-learn>=1.7.2",
    "shap>=0.49.1",
    "xgboost~=2.1.4",
]
